[package]
name = "graphops"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/graphops"
homepage = "https://github.com/arclabs561/graphops"
documentation = "https://docs.rs/graphops"
description = "Graph operators: PageRank/PPR/walks/reachability/node2vec/betweenness."
publish = true
readme = "README.md"
keywords = ["pagerank", "ppr", "node2vec", "graphs"]
categories = ["algorithms", "mathematics"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
rayon = { version = "1.10", optional = true }
ordered-float = "4.2"
thiserror = "2.0"
petgraph = { version = "0.6", optional = true }

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"
stats_alloc = "0.1"

[features]
default = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]
petgraph = ["dep:petgraph"]

